--- a/views/home.pug
+++ b/views/home.pug
@@ -1,6 +1,24 @@
 extends layout
 
+block head
+  script(src='https://www.google.com/recaptcha/api.js' async='' defer='')
+
 block content
-  h1 URL Shortener
-  p.lead An application to shorten URLs.
-  input
+  .pb-2.mt-2.mb-4.border-bottom
+    h3 Enter a long URL to create a gov URL
+
+  form(method='POST')
+    input(type='hidden', name='_csrf', value=_csrf)
+  .form-group.row
+  label(class='col-md-2 col-form-label font-weight-bold', for='name') Long Url
+  .col-md-8
+    input.form-control(type='url', name='longUrl', autofocus, required)
+  .form-group.row
+  label(class='col-md-2 col-form-label font-weight-bold', for='name') Alias Url
+  .col-md-8
+    input.form-control(type='text', name='aliasUrl', autofocus, required)
+    .form-group
+        br
+        button.btn.btn-primary(type='submit')
+          i.far.fa-envelope.fa-sm
+          | Send
