Adding event handler on submit button

--- a/views/home.pug
+++ b/views/home.pug
@@ -19,6 +19,6 @@ block content
     input.form-control(type='text', name='aliasUrl', autofocus, required)
     .form-group
         br
-        button.btn.btn-primary(type='submit')
+        button.btn.btn-primary#submit-btn(type='submit')
           i.far.fa-envelope.fa-sm
           | Send
