fix: contact form wording

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -5,7 +5,7 @@ block head
 
 block content
   .pb-2.mt-2.mb-4.border-bottom
-    h3 Enter a long URL to create a gov URL
+    h3 Contact Us
 
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
