Add several sections

--- a/views/about.pug
+++ b/views/about.pug
@@ -4,6 +4,28 @@ block head
   script(src='https://www.google.com/recaptcha/api.js' async='' defer='')
 
 block content
-  .pb-2.mt-2.mb-4.border-bottom
-    h3 About this app 
-    p .... Filled out text ...
+  section.pb-2.mt-2.mb-4
+    h5.border-bottom About Menehune URL Shortener
+    p Menehune URL Shortener was created when our state agencies ran into issues while sending links to other folks. 
+    p External URL shorteners have been used with malicious intent and have been blocked from within the state network.
+
+  section.pb-2.mt-2.mb-4
+    h3.border-bottom Our mission
+    p To help you grow and scale through link management. With our shortened links, we strive to bring convenience and trust authorized by the states network.
+
+  section.pb-2.mt-2.mb-4
+  h3.border-bottom What makes us different
+  .container.text-center
+    .row.align-items-start 
+      section.col
+        img(src='/opensourced.jpg' alt='' width='150' height='150')
+        h5 Open-sourced
+        p Our link management platform was developed with you in mind. Every moving part is available for you to inspect and examine how this all works.
+      section.col
+        img(src='/reliable.jpg' alt='' width='150' height='150')
+        h5 Reliable
+        p A major issue the state faced was shortened urls containing malware. Our platform compares known malicious factors and alerts you when these factors are detected.
+      section.col
+        img(src='/culture.jpg' alt='' width='150' height='150')
+        h5 Culture
+        p Our team is a part of the Code For Hawaii organization. We are local volunteers that use technology and open data to make local communities better.
