--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -41,7 +41,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
   .container
     a.navbar-brand(href='/')
       img.d-inline-block.align-text-top(src='/turtle.jpeg' alt='' width='30' height='24')
-      |  Menehune URL Shortener
+      |  Menehune URL
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarColor01' aria-controls='navbarColor01' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarColor01.collapse.navbar-collapse
