--- a/views/account/profile.pug
+++ b/views/account/profile.pug
@@ -12,16 +12,16 @@ block content
         input.form-control(type='email', name='email', id='email', value=user.email, autocomplete='email', required)
       .offset-sm-3.col-md-7.pl-3
         if user.emailVerified
-          .text-success.font-italic
+          .text-success.font-italic.mb-3
             | Verified
         else
-          .text-danger.font-italic
+          .text-danger.font-italic.mb-3
             | Unverified: &nbsp;
             a(href='/account/verify') Send verification email
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='name') Name
       .col-md-7
-        input.form-control(type='text', name='name', id='name', value=user.profile.name, autocomplete='name')
+        input.form-control.mb-3(type='text', name='name', id='name', value=user.profile.name, autocomplete='name')
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right Gender
       .col-sm-6
@@ -39,20 +39,20 @@ block content
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='location') Location
       .col-md-7
-        input.form-control(type='text', name='location', id='location', value=user.profile.location, autocomplete)
+        input.form-control.mb-3(type='text', name='location', id='location', value=user.profile.location, autocomplete)
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='website') Website
       .col-md-7
-        input.form-control(type='text', name='website', id='website', value=user.profile.website, autocomplete='url')
+        input.form-control.mb-3(type='text', name='website', id='website', value=user.profile.website, autocomplete='url')
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right Gravatar
       .col-sm-4
-        img(src=user.gravatar(), class='profile', width='100', height='100')
+        img.mb-3(src=user.gravatar(), class='profile', width='100', height='100')
     .form-group
       .offset-sm-3.col-md-7.pl-2
         button.btn.btn.btn-primary(type='submit')
           i.fas.fa-pencil-alt.fa-sm
-          | Update Profile
+          |  Update Profile
 
   .pb-2.mt-2.mb-4.border-bottom
     h3 Change Password
@@ -62,16 +62,16 @@ block content
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='password') New Password
       .col-md-7
-        input.form-control(type='password', name='password', id='password', autocomplete='new-password', minlength='8', required)
+        input.form-control.mb-3(type='password', name='password', id='password', autocomplete='new-password', minlength='8', required)
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='confirmPassword') Confirm Password
       .col-md-7
-        input.form-control(type='password', name='confirmPassword', id='confirmPassword', autocomplete='new-password', minlength='8', required)
+        input.form-control.mb-3(type='password', name='confirmPassword', id='confirmPassword', autocomplete='new-password', minlength='8', required)
     .form-group
       .offset-sm-3.col-md-7.pl-2
         button.btn.btn-primary(type='submit')
           i.fas.fa-lock.fa-sm
-          | Change Password
+          |  Change Password
 
   .pb-2.mt-2.mb-4.border-bottom
     h3 Delete Account
@@ -83,4 +83,4 @@ block content
       .offset-sm-3.col-md-7.pl-2
         button.btn.btn-danger(type='submit')
           i.fas.fa-trash-alt.fa-sm
-          | Delete my account
+          |  Delete my account
