Add target attribute for anchor

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -3,4 +3,4 @@ footer.mt-auto.py-3.bg-light
     span © 2022 URL Shortener. All Rights Reserved
     ul.mb-0
       li.list-inline-item
-        a(href='https://github.com/CodeforHawaii/HACC2022') GitHub
+        a(href='https://github.com/CodeforHawaii/HACC2022' target='_blank') GitHub
