Add mb-3 to div

--- a/views/account/profile.pug
+++ b/views/account/profile.pug
@@ -80,7 +80,7 @@ block content
     .form-group
       p.offset-sm-3.col-md-7.pl-2 You can delete your account, but keep in mind this action is irreversible.
       input(type='hidden', name='_csrf', value=_csrf)
-      .offset-sm-3.col-md-7.pl-2
+      .offset-sm-3.col-md-7.pl-2.mb-3
         button.btn.btn-danger(type='submit')
           i.fas.fa-trash-alt.fa-sm
           |  Delete my account
