--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -51,14 +51,12 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
         if user
           li.nav-item
             a.nav-link(class=(title === 'Shortener') ? 'active' : '')(href='/shortener') Shortener
-        li.nav-item
-          a.nav-link(class=(title === 'Contact') ? 'active' : '')(href='/admin') Settings
         if user
           li.nav-item
             a.nav-link(class=(title === 'URLs') ? 'active' : '')(href='/urls') URLs
           if user.email == "admin@gmail.com"
             li.nav-item
-              a.nav-link(class=(title === 'Admin') ? 'active' : '')(href='/admin') Control Panel
+              a.nav-link(class=(title === 'Admin') ? 'active' : '')(href='/admin') Settings
 
       form.d-flex
         if !user
