feat: adding post req for user defined slug

--- a/views/shortener.pug
+++ b/views/shortener.pug
@@ -11,7 +11,7 @@ block content
     input.form-control.mb-3(type='url', name='longUrl', placeholder='https://portal.ehawaii.gov/residents/newcomers-guide/#becomeAResidentOfHawaii', autofocus, required)
     .alert.alert-danger.invisible.d-none#error-message
     label.col-form-label.d-block(for='name') Customize your link
-    input.form-control.mb-3(type='text', name='aliasUrl', placeholder='NewcomersGuide', autofocus)
+    input.form-control.mb-3(type='text', name='slug', placeholder='NewcomersGuide', autofocus)
     button.btn.btn-primary.w-100#submit-btn
       i.far.fa-envelope.fa-sm
       |  Send
