--- a/views/about.pug
+++ b/views/about.pug
@@ -11,8 +11,9 @@ block content
 
   section.pb-2.mt-2.mb-4
     h5.border-bottom About Menehune URL Shortener
-    p Menehune URL Shortener was created when our state agencies ran into issues while sending links to other folks. 
+    p Menehune URL Shortener was created to help increase trust and transparency when using a URL shortener. 
     p External URL shorteners have been used with malicious intent and have been blocked from within the state network.
+    p Menehune URL Shortener helps solve this by increasing authenticity and non-repudiation of URLs through the use of user accounts and threat detection. 
 
   section.pb-2.mt-2.mb-4
     h3.border-bottom Our mission
