--- a/views/shortener.pug
+++ b/views/shortener.pug
@@ -20,4 +20,6 @@ block content
   .alert.alert-success.invisible.d-none#result
     .alert-heading 🎉 Your new URL 🎉
     hr
-    p#shortUrl
+    div.d-flex.justify-content-between.align-items-center
+      p.mb-0#shortUrl 
+      button.btn.btn-outline-dark.shadow-sm.invisible.d-none#copy-btn Copy to clipboard
