Edit wording on 'How to use' section

--- a/views/about.pug
+++ b/views/about.pug
@@ -6,8 +6,9 @@ block head
 block content
   section.pb-2.mt-2.mb-4
     h3.border-bottom How to use Menehune URL
-    p Please sign in or create an account to use access URL shortening services.
-    p Once signed in, click the Shortener category in the navigation bar. The alias URL field will be the shortened URL name.
+    p Please sign in or create an account to access URL shortening services.
+    p Once signed in, click the Shortener category in the navigation bar. Further instruction will be on the shortener page.
+
 
   section.pb-2.mt-2.mb-4
     h5.border-bottom About Menehune URL Shortener
