--- a/views/shortener.pug
+++ b/views/shortener.pug
@@ -25,7 +25,7 @@ block content
       button.btn.btn-outline-dark.shadow-sm.invisible.d-none#copy-btn Copy to clipboard
   br
   section.card.rounded-10.pb-4.pt-2.mt-4.px-5.mx-auto
-    h1.border-bottom.pb-2.text-center Tips
+    h1.border-bottom.pb-2.text-center Guidelines
     .card-body
       ul
         li The link must start with " http:// " or " https:// "
