--- a/views/shortener.pug
+++ b/views/shortener.pug
@@ -6,16 +6,15 @@ block head
 block content
   .card.rounded-10.pb-4.pt-2.mt-4.px-5.mx-auto
     .card-body
-      form(method='POST') 
-        input(type='hidden', name='_csrf', value=_csrf)
-        label.col-form-label.d-block(for='name') Enter the link you want to shorten
-        input.form-control.mb-3(type='url', name='longUrl', placeholder='https://portal.ehawaii.gov/residents/newcomers-guide/#becomeAResidentOfHawaii', autofocus, required)
-        .alert.alert-danger.invisible.d-none#error-message
-        label.col-form-label.d-block(for='name') Customize your link
-        input.form-control.mb-3(type='text', name='aliasUrl', placeholder='NewcomersGuide', autofocus)
-        button.btn.btn-primary.w-100#submit-btn(type='submit')
-          i.far.fa-envelope.fa-sm
-          |  Send
+    input(type='hidden', name='_csrf', value=_csrf)
+    label.col-form-label.d-block(for='name') Enter the link you want to shorten
+    input.form-control.mb-3(type='url', name='longUrl', placeholder='https://portal.ehawaii.gov/residents/newcomers-guide/#becomeAResidentOfHawaii', autofocus, required)
+    .alert.alert-danger.invisible.d-none#error-message
+    label.col-form-label.d-block(for='name') Customize your link
+    input.form-control.mb-3(type='text', name='aliasUrl', placeholder='NewcomersGuide', autofocus)
+    button.btn.btn-primary.w-100#submit-btn
+      i.far.fa-envelope.fa-sm
+      |  Send
   br
   .alert.alert-success.invisible.d-none#result
     .alert-heading 🎉 Your new URL 🎉
