adding menehune image

--- a/views/about.pug
+++ b/views/about.pug
@@ -5,6 +5,7 @@ block head
 
 block content
   section.pb-2.mt-2.mb-4
+    img(src='/menehune-full.png' width='200px' height='200px' alt='menehune' class='img-fluid')
     h3.border-bottom How to use Menehune URL
     p Please sign in or create an account to access URL shortening services.
     p Once signed in, click the Shortener category in the navigation bar. Further instruction will be on the shortener page.
