--- a/views/shortener.pug
+++ b/views/shortener.pug
@@ -12,6 +12,9 @@ block content
     .alert.alert-danger.invisible.d-none#error-message
     label.col-form-label.d-block(for='name') Customize your link
     input.form-control.mb-3(type='text', name='slug', placeholder='NewcomersGuide', autofocus)
+    label.col-form-label.d-block(for='expiration') Choose an expiration date for your new link
+    input.form-control.mb-3(type='date', name='expirationDate', required pattern="\d{4}-\d{2}-\d{2}" min='2022-10-31', max='2024-10-31', autofocus)
+    span.validity 
     button.btn.btn-primary.w-100#submit-btn
       i.far.fa-envelope.fa-sm
       |  Send
