Add copy to clipboard library (#33)
* Adding clipboard library

* Commenting out existing clipboard functionality

* Adding new copy button functionality using the clipboard library

* Fixing copy button feedback

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,7 @@ html.h-100
     script(src='/js/lib/jquery.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
+    script(src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js")
     script(src='https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js')
 
     script(type="text/javascript").
