--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -56,7 +56,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
             a.nav-link(class=(title === 'URLs') ? 'active' : '')(href='/urls') URLs
           if user.email == "admin@gmail.com"
             li.nav-item
-              a.nav-link(class=(title === 'Admin') ? 'active' : '')(href='/admin') Settings
+              a.nav-link(class=(title === 'Admin') ? 'active' : '')(href='/admin') Console
 
       form.d-flex
         if !user
