--- a/views/admin.pug
+++ b/views/admin.pug
@@ -7,7 +7,17 @@ block head
   script(src='/js/countries.geo.js')
   script(src="https://cdn.jsdelivr.net/npm/chart.js")
   link('rel'="stylesheet" href='https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css')
+  link(ref='stylesheet' href='https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css')
+  link(ref='stylesheet' href='https://cdn.datatables.net/select/1.4.0/css/select.dataTables.min.css')
+  link(ref='stylesheet' href='https://cdn.datatables.net/searchpanes/2.0.2/css/searchPanes.dataTables.min.css')
   script(src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js")
+  script(src='https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js')
+  script(src='https://cdn.datatables.net/buttons/1.3.1/js/buttons.html5.min.js')
+  script(src='https://cdn.datatables.net/select/1.4.0/js/dataTables.select.min.js')
+  script(src='https://cdn.datatables.net/searchpanes/2.0.2/js/dataTables.searchPanes.min.js')
   
   style.
     #map {
